# fffx-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
test_data/: test_input.fasta  test_output.fasta  test_output.translation_table.tsv
