[package]
name = "fffx-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="fffx"
path = "src/main.rs"

[dependencies]
bytecount = { version = "0.6.8", features = ["runtime-dispatch-simd"] }
clap = { version = "4.5.37", features = ["derive"] }
memchr = "2.7.4"
needletail = "0.6.3"
pulp = "0.21.5"
rayon = "1.10.0"
simdutf8 = "0.1.5"
